--- a/ConversationsApi/pom.xml
+++ b/ConversationsApi/pom.xml
@@ -36,6 +36,12 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-messaging</artifactId>
+			<version>6.1.3</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
